Fix z-index

--- a/assets/scss/3d.scss
+++ b/assets/scss/3d.scss
@@ -71,7 +71,7 @@
 
         .fake3d.single {
           position: absolute;
-          z-index: 10;
+          z-index: 9;
           top: 0;
           left: 0;
           right: 0;
